@@ -384,6 +384,8 @@ x^-2 + 31/15*x^2 + 2501/756*x^4 + 961/675*x^6 + 77531/41580*x^8 + O(x^9)
 [-1.2137559863387746413172077159498331998, -0.757861263970860955134912630669
 68406624*I]
 [-1, -2*w]
+4.9747357492884922209880132412724056589 - 3.14159265358979323846264338327950
+28842*I
 [-0.11111111111111111111110856972094952393 - 1512366075204170948725763450259
 63248351/100000000000000000000000000000000000000000000000000*I, 7.3468396926
 392969248046033576390354864 E-40 + 1/100000000000000000000000000000000000000
@@ -740,4 +742,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
 0
 [-0.52751724240790530394437835702346995884*I, -0.090507650025885335533571758
 708283389896*I]
-Total time spent: 585
+Total time spent: 590
